fix navigation mobile

--- a/sass/tim/_header.scss
+++ b/sass/tim/_header.scss
@@ -277,10 +277,6 @@ header {
                     padding-top: 15px;
                     padding-bottom: 15px;
                 }
-                
-                li:nth-child(3) {
-                    display: none;
-                }
             }
         }
     }
